stderr.txt
/home/ec2-user/hydrate/bot.js:21
        var rand = Math.floor(Math.random() * (max-min+1) + min
                                                            ^^^

SyntaxError: missing ) after argument list
    at createScript (vm.js:56:10)
    at Object.runInThisContext (vm.js:97:10)
    at Module._compile (module.js:542:28)
    at Object.Module._extensions..js (module.js:579:10)
    at Module.load (module.js:487:32)
    at tryModuleLoad (module.js:446:12)
    at Function.Module._load (module.js:438:3)
    at Module.runMain (module.js:604:10)
    at run (bootstrap_node.js:383:7)
    at startup (bootstrap_node.js:149:9)

npm ERR! Linux 4.9.38-16.35.amzn1.x86_64
npm ERR! argv "/home/ec2-user/.nvm/versions/node/v6.11.5/bin/node" "/home/ec2-user/.nvm/versions/node/v6.11.5/bin/npm" "start"
npm ERR! node v6.11.5
npm ERR! npm  v3.10.10
npm ERR! code ELIFECYCLE
npm ERR! hydrate@1.0.0 start: `node bot.js`
npm ERR! Exit status 1
npm ERR! 
npm ERR! Failed at the hydrate@1.0.0 start script 'node bot.js'.
npm ERR! Make sure you have the latest version of node.js and npm installed.
npm ERR! If you do, this is most likely a problem with the hydrate package,
npm ERR! not with npm itself.
npm ERR! Tell the author that this fails on your system:
npm ERR!     node bot.js
npm ERR! You can get information on how to open an issue for this project with:
npm ERR!     npm bugs hydrate
npm ERR! Or if that isn't available, you can get their info via:
npm ERR!     npm owner ls hydrate
npm ERR! There is likely additional logging output above.

npm ERR! Please include the following file with any support request:
npm ERR!     /home/ec2-user/hydrate/npm-debug.log
